--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-robotframework==7.0
-robotframework-browser==17.5.2
-robotframework-requests==0.9.6
-requests==2.31.0
-robotframework-jsonlibrary==0.5
-robotframework-datadriver==1.10.0
+robotframework>=6.0,<7.0
+robotframework-browser>=17.0.0
+robotframework-requests>=0.9.6
+requests>=2.31.0
+robotframework-jsonlibrary>=0.5
+robotframework-datadriver>=1.10.0
+playwright>=1.40.0
+robotframework-pabot>=2.16.0
 
